deploy/deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP_NAME-ingress
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: $URL
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $APP_NAME-svc
                port:
                  number: $APP_PORT
    - host: "xn--9kq653ed3qgqg.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $APP_NAME-svc
                port:
                  number: $APP_PORT

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
  labels:
    app: $APP_NAME
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      imagePullSecrets:
        - name: aliyun-docker-registry
      containers:
        - name: $APP_NAME
          image: $DOCKER_IMAGE
          ports:
            - containerPort: $APP_PORT
              protocol: TCP
          imagePullPolicy: IfNotPresent
#      tolerations:
#        - key: node-role.kubernetes.io/master
#          effect: NoSchedule

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME-svc
  namespace: $NAMESPACE
  labels:
    app: $APP_NAME-svc
spec:
  ports:
    - port: $APP_PORT
      targetPort: $APP_PORT
  selector:
    app: $APP_NAME
  type: NodePort
